--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -20,13 +20,13 @@
       <service name="MovieLibrary.MovieService">
         <endpoint address="" binding="basicHttpBinding" contract="MovieLibrary.IMovieService">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/MovieServiceLibrary/Service1/"/>
+            <add baseAddress="http://localhost:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
           </baseAddresses>
         </host>
       </service>
