--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -16,6 +16,10 @@
   <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
   <system.serviceModel>
+    <diagnostics performanceCounters="Default">
+      <endToEndTracing propagateActivity="true" activityTracing="true"
+        messageFlowTracing="true" />
+    </diagnostics>
     <services>
       <service name="MovieLibrary.MovieService">
         <endpoint address="" binding="basicHttpBinding" contract="MovieLibrary.IMovieService">
@@ -26,7 +30,7 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
+            <add baseAddress="http://localhost/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
           </baseAddresses>
         </host>
       </service>
