--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -15,8 +15,25 @@
   </system.web>
   <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Informazioni dettagliate">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add initializeData="c:\logs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener"
+            name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
   <system.serviceModel>
     <diagnostics performanceCounters="Default">
+      <messageLogging logEntireMessage="true" logKnownPii="true" logMalformedMessages="true"
+        logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
       <endToEndTracing propagateActivity="true" activityTracing="true"
         messageFlowTracing="true" />
     </diagnostics>
@@ -30,7 +47,7 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
+            <add baseAddress="http://desktop-spmrh68/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
           </baseAddresses>
         </host>
       </service>
