--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework"
-          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-          requirePermission="false"/>
-    </configSections>
-
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
-    <compilation debug="true"/>
+    <compilation debug="true" />
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
   </system.web>
   <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
@@ -22,8 +30,7 @@
           <add type="System.Diagnostics.DefaultTraceListener" name="Default">
             <filter type="" />
           </add>
-          <add initializeData="c:\logs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener"
-            name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
+          <add initializeData="c:\logs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
             <filter type="" />
           </add>
         </listeners>
@@ -32,10 +39,8 @@
   </system.diagnostics>
   <system.serviceModel>
     <diagnostics performanceCounters="Default">
-      <messageLogging logEntireMessage="true" logKnownPii="true" logMalformedMessages="true"
-        logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
-      <endToEndTracing propagateActivity="true" activityTracing="true"
-        messageFlowTracing="true" />
+      <messageLogging logEntireMessage="true" logKnownPii="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
+      <endToEndTracing propagateActivity="true" activityTracing="true" messageFlowTracing="true" />
     </diagnostics>
     <services>
       <service name="MovieLibrary.MovieService">
@@ -54,22 +59,16 @@
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- Per evitare la diffusione di informazioni sui metadati, 
-          impostare i valori seguenti su false prima della distribuzione -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-          <!-- Per ricevere i dettagli sull'eccezione per scopi di debug in caso di guasti, 
-          impostare il valore riportato sotto su true. Impostarlo su false prima della diffusione 
-          per evitare di diffondere informazioni sull'eccezione -->
-          <serviceDebug includeExceptionDetailInFaults="False"/>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
 </configuration>
