Db locale non raggiungibile da IIIS locale. PERCHE'?

--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -30,17 +30,21 @@
           <add type="System.Diagnostics.DefaultTraceListener" name="Default">
             <filter type="" />
           </add>
-          <add initializeData="c:\logs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
+          <add initializeData="c:\WCFlogs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
             <filter type="" />
           </add>
         </listeners>
       </source>
     </sources>
+    <trace autoflush="true" />
   </system.diagnostics>
   <system.serviceModel>
     <diagnostics performanceCounters="Default">
-      <messageLogging logEntireMessage="true" logKnownPii="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
-      <endToEndTracing propagateActivity="true" activityTracing="true" messageFlowTracing="true" />
+      <messageLogging logEntireMessage="true" logKnownPii="true" logMalformedMessages="true"
+        logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"
+        maxMessagesToLog="100" maxSizeOfMessageToLog="2000" />
+      <endToEndTracing propagateActivity="true" activityTracing="true"
+        messageFlowTracing="true" />
     </diagnostics>
     <services>
       <service name="MovieLibrary.MovieService">
