--- a/MovieServiceLibrary/packages.config
+++ b/MovieServiceLibrary/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.3" targetFramework="net472" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net472" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net472" />
+  <package id="WCFDataAnnotations" version="1.1.0" targetFramework="net472" />
 </packages>
