--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -4,6 +4,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="LocalMovieDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MovieLibrary;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
@@ -25,7 +28,7 @@
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
   <system.diagnostics>
     <sources>
-      <source name="System.ServiceModel.MessageLogging" switchValue="Informazioni dettagliate">
+      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose, ActivityTracing">
         <listeners>
           <add type="System.Diagnostics.DefaultTraceListener" name="Default">
             <filter type="" />
@@ -56,9 +59,19 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://desktop-spmrh68/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
+            <add baseAddress="http://desktop-spmrh68:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
           </baseAddresses>
         </host>
+        <endpoint name="IISEndPoint" address="http://desktop-spmrh68/Design_Time_Addresses/MovieServiceLibrary/MovieService/" binding="basicHttpBinding" contract="MovieLibrary.IMovieService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint name="IISMexEndPoint" address="http://desktop-spmrh68/Design_Time_Addresses/MovieServiceLibrary/MovieService/mex" binding="mexHttpBinding" contract="IMetadataExchange">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
       </service>
     </services>
     <behaviors>
