--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="LocalMovieDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MovieLibrary;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+    <add name="MovieDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MovieLibrary;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -33,7 +33,8 @@
           <add type="System.Diagnostics.DefaultTraceListener" name="Default">
             <filter type="" />
           </add>
-          <add initializeData="c:\WCFlogs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
+          <add initializeData="c:\WCFlogs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener"
+            name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
             <filter type="" />
           </add>
         </listeners>
@@ -50,7 +51,7 @@
         messageFlowTracing="true" />
     </diagnostics>
     <services>
-      <service name="MovieLibrary.MovieService">
+      <service name="MovieLibrary.MovieService" behaviorConfiguration="mexBehavior">
         <endpoint address="" binding="basicHttpBinding" contract="MovieLibrary.IMovieService">
           <identity>
             <dns value="localhost" />
@@ -62,21 +63,11 @@
             <add baseAddress="http://desktop-spmrh68:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
           </baseAddresses>
         </host>
-        <endpoint name="IISEndPoint" address="http://desktop-spmrh68/Design_Time_Addresses/MovieServiceLibrary/MovieService/" binding="basicHttpBinding" contract="MovieLibrary.IMovieService">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <endpoint name="IISMexEndPoint" address="http://desktop-spmrh68/Design_Time_Addresses/MovieServiceLibrary/MovieService/mex" binding="mexHttpBinding" contract="IMetadataExchange">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior name="">
+        <behavior name="mexBehavior">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
