--- a/MovieConsumer/App.config
+++ b/MovieConsumer/App.config
@@ -4,7 +4,15 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IMovieService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://desktop-spmrh68/MovieServiceLibrary/MovieLibrary.MovieService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMovieService"
+                contract="IISMovieServiceReference.IMovieService" name="BasicHttpBinding_IMovieService" />
+        </client>
     </system.serviceModel>
 </configuration>
