--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -1,73 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
-    <add name="MovieDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MovieLibrary;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings>
-  <system.web>
-    <compilation debug="true" />
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
-  <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
-  app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework"
+          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          requirePermission="false"/>
+    </configSections>
   <system.diagnostics>
     <sources>
-      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose, ActivityTracing">
+      <source propagateActivity="true" name="System.ServiceModel" switchValue="Critical,Information,ActivityTracing">
         <listeners>
           <add type="System.Diagnostics.DefaultTraceListener" name="Default">
-            <filter type="" />
-          </add>
-          <add initializeData="c:\WCFlogs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener"
-            name="messages" traceOutputOptions="Timestamp, ProcessId, ThreadId">
             <filter type="" />
           </add>
         </listeners>
       </source>
     </sources>
+    <sharedListeners>
+      <add initializeData="C:\WCFlogs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+        name="MovieMessageListener" traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId, Callstack">
+        <filter type="" />
+      </add>
+    </sharedListeners>
     <trace autoflush="true" />
   </system.diagnostics>
+  <appSettings>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+  </appSettings>
+  <system.web>
+    <compilation debug="true"/>
+  </system.web>
+  <connectionStrings>
+    <add name="MovieDbContext"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MovieLibrary;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
+  app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
   <system.serviceModel>
-    <diagnostics performanceCounters="Default">
+    <diagnostics>
       <messageLogging logEntireMessage="true" logKnownPii="true" logMalformedMessages="true"
-        logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"
-        maxMessagesToLog="100" maxSizeOfMessageToLog="2000" />
+        logMessagesAtServiceLevel="true" maxMessagesToLog="500" maxSizeOfMessageToLog="10000" />
       <endToEndTracing propagateActivity="true" activityTracing="true"
         messageFlowTracing="true" />
     </diagnostics>
     <services>
-      <service name="MovieLibrary.MovieService" behaviorConfiguration="mexBehavior">
-        <endpoint address="" binding="basicHttpBinding" contract="MovieLibrary.IMovieService">
+      <service name="MovieLibrary.MovieService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration=""
+          contract="MovieLibrary.IMovieService">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration=""
+          contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://desktop-spmrh68:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
+            <add baseAddress="http://localhost:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior name="mexBehavior">
+        <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
@@ -76,7 +72,8 @@
   </system.serviceModel>
   <entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+
 </configuration>
