--- a/WcfServiceLibrary1/App.config
+++ b/WcfServiceLibrary1/App.config
@@ -1,6 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <system.diagnostics>
+    <sources>
+      <source propagateActivity="true" name="System.ServiceModel" switchValue="Avviso,Information,ActivityTracing">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add initializeData="c:\logs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="messages">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+    </sources>
+    <trace autoflush="true" />
+  </system.diagnostics>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -10,11 +28,15 @@
   <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
   <system.serviceModel>
+    <diagnostics wmiProviderEnabled="true" performanceCounters="Default">
+      <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="false" logMessagesAtTransportLevel="true" maxSizeOfMessageToLog="10000" />
+      <endToEndTracing propagateActivity="true" activityTracing="true" messageFlowTracing="true" />
+    </diagnostics>
     <services>
       <service name="WcfServiceLibrary1.Service1">
         <host>
           <baseAddresses>
-            <add baseAddress = "http://localhost:8800/Design_Time_Addresses/WcfServiceLibrary1/Service1/" />
+            <add baseAddress="http://localhost:8800/Design_Time_Addresses/WcfServiceLibrary1/Service1/" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
@@ -26,13 +48,13 @@
                automaticamente un'identità appropriata.
           -->
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
         <!-- Metadata Endpoints -->
-        <!-- L'endpoint di scambio metadati viene utilizzato dal servizio per offrire una migliore visualizzazione ai client. --> 
+        <!-- L'endpoint di scambio metadati viene utilizzato dal servizio per offrire una migliore visualizzazione ai client. -->
         <!-- L'endpoint non utilizza un'associazione protetta e deve essere protetto o rimosso prima della distribuzione -->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
@@ -40,7 +62,7 @@
         <behavior>
           <!-- Per evitare la diffusione di informazioni sui metadati, 
           impostare i valori seguenti su false prima della distribuzione -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
           <!-- Per ricevere i dettagli sull'eccezione per scopi di debug in caso di guasti, 
           impostare il valore riportato sotto su true. Impostarlo su false prima della diffusione 
           per evitare di diffondere informazioni sull'eccezione -->
@@ -49,5 +71,13 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-
+  <connectionStrings>
+    <add name="MovieLibraryEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MovieLibrary.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
