Aggiunti altri progetti

--- a/MovieServiceLibrary/App.config
+++ b/MovieServiceLibrary/App.config
@@ -54,14 +54,22 @@
         </endpoint>
         <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration=""
           contract="IMetadataExchange" />
+        <endpoint address="rest" behaviorConfiguration="restfullBehavior"
+          binding="webHttpBinding" bindingConfiguration="" name="restEndPoint"
+          bindingName="restBinding" contract="MovieLibrary.IMovieService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8800/Design_Time_Addresses/MovieServiceLibrary/MovieService/" />
+            <add baseAddress="http://localhost:8800/MovieService/" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="restfullBehavior">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
