--- a/WcfServiceLibrary1/App.config
+++ b/WcfServiceLibrary1/App.config
@@ -1,24 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <system.diagnostics>
-    <sources>
-      <source propagateActivity="true" name="System.ServiceModel" switchValue="Avviso,Information,ActivityTracing">
-        <listeners>
-          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
-            <filter type="" />
-          </add>
-          <add initializeData="c:\logs\messages.svclog" type="System.Diagnostics.XmlWriterTraceListener" name="messages">
-            <filter type="" />
-          </add>
-        </listeners>
-      </source>
-    </sources>
-    <trace autoflush="true" />
-  </system.diagnostics>
+
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -28,13 +10,10 @@
   <!-- Quando si distribuisce il progetto della libreria di servizi, è necessario aggiungere il contenuto del file di configurazione al file 
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
   <system.serviceModel>
-    <diagnostics wmiProviderEnabled="true" performanceCounters="Default">
-      <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="false" logMessagesAtTransportLevel="true" maxSizeOfMessageToLog="10000" />
-      <endToEndTracing propagateActivity="true" activityTracing="true" messageFlowTracing="true" />
-    </diagnostics>
     <services>
       <service name="WcfServiceLibrary1.Service1">
-        <endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary1.IService1">
+        <endpoint address="" behaviorConfiguration="webBehavior" binding="webHttpBinding"
+          bindingConfiguration="" name="webep" contract="WcfServiceLibrary1.IService1">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -42,12 +21,17 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8800/Design_Time_Addresses/WcfServiceLibrary1/Service1/" />
+            <add baseAddress="http://localhost/WcfServiceLibrary1/Service1/" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="webBehavior">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
@@ -56,13 +40,5 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-  <connectionStrings>
-    <add name="MovieLibraryEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MovieLibrary.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+
 </configuration>
