--- a/TestService/app.config
+++ b/TestService/app.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -15,8 +15,7 @@
   <system.serviceModel>
     <services>
       <service name="TestService.BookService">
-        <endpoint address="" behaviorConfiguration="restfulBehavior"
-          binding="webHttpBinding" bindingConfiguration="" contract="TestService.IBookService">
+        <endpoint address="" behaviorConfiguration="restfulBehavior" binding="webHttpBinding" bindingConfiguration="" contract="TestService.IBookService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -45,6 +44,7 @@
   </system.serviceModel>
   <connectionStrings>
     <add name="BookDbEntities" connectionString="metadata=res://*/BookModel.csdl|res://*/BookModel.ssdl|res://*/BookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=BookDb;User ID=sa;Password=Rinoceronte$455;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BookDbExpressEntities" connectionString="metadata=res://*/DbExpressBookModel.csdl|res://*/DbExpressBookModel.ssdl|res://*/DbExpressBookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookDbExpress;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
