--- a/TestService/TestService.csproj
+++ b/TestService/TestService.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs">
-      <DependentUpon>BookModel.tt</DependentUpon>
+      <DependentUpon>DbExpressBookModel.tt</DependentUpon>
     </Compile>
     <Compile Include="BookModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -71,6 +71,21 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BookModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DbExpressBookModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbExpressBookModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DbExpressBookModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbExpressBookModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DbExpressBookModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DbExpressBookModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="IBookService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BookService.cs" />
@@ -84,6 +99,13 @@
     <None Include="BookModel.edmx.diagram">
       <DependentUpon>BookModel.edmx</DependentUpon>
     </None>
+    <EntityDeploy Include="DbExpressBookModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DbExpressBookModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DbExpressBookModel.edmx.diagram">
+      <DependentUpon>DbExpressBookModel.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +118,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>BookModel.edmx</DependentUpon>
       <LastGenOutput>BookModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="DbExpressBookModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DbExpressBookModel.edmx</DependentUpon>
+      <LastGenOutput>DbExpressBookModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DbExpressBookModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DbExpressBookModel.edmx</DependentUpon>
+      <LastGenOutput>DbExpressBookModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
