Aggiustamenti al metodo POST di Movie Services

--- a/MovieServiceLibrary2/app.config
+++ b/MovieServiceLibrary2/app.config
@@ -18,8 +18,8 @@
   <system.serviceModel>
     <services>
       <service name="MovieServiceLibrary2.MovieService">
-        <endpoint address="" behaviorConfiguration="restBehavior" binding="webHttpBinding"
-          bindingConfiguration="" contract="MovieServiceLibrary2.IMovieService">
+        <endpoint address="webep" behaviorConfiguration="restBehavior"
+          binding="webHttpBinding" bindingConfiguration="" contract="MovieServiceLibrary2.IMovieService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -35,7 +35,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp />
+          <webHttp helpEnabled="true" />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
