--- a/TestService/app.config
+++ b/TestService/app.config
@@ -45,6 +45,7 @@
   <connectionStrings>
     <add name="BookDbEntities" connectionString="metadata=res://*/BookModel.csdl|res://*/BookModel.ssdl|res://*/BookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=BookDb;User ID=sa;Password=Rinoceronte$455;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="BookDbExpressEntities" connectionString="metadata=res://*/DbExpressBookModel.csdl|res://*/DbExpressBookModel.ssdl|res://*/DbExpressBookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookDbExpress;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BookDbExpressEntities1" connectionString="metadata=res://*/BookDbExpressModel2.csdl|res://*/BookDbExpressModel2.ssdl|res://*/BookDbExpressModel2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookDbExpress;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
