--- a/MovieServiceLibrary2/app.config
+++ b/MovieServiceLibrary2/app.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -9,6 +9,7 @@
 
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
+    <add key="aspnet:RoslynCompilerLocation" value="roslyn"/>
   </appSettings>
   <system.web>
     <compilation debug="true"/>
@@ -18,18 +19,16 @@
   <system.serviceModel>
     <services>
       <service name="MovieServiceLibrary2.MovieService">
-        <endpoint address="webep" behaviorConfiguration="restBehavior"
-          binding="webHttpBinding" bindingConfiguration="" name="wcfrestep"
+        <endpoint address="webep" behaviorConfiguration="restBehavior" binding="webHttpBinding" bindingConfiguration="" name="wcfrestep"
           contract="MovieServiceLibrary2.IMovieService">
           <identity>
-            <dns value="localhost" />
+            <dns value="localhost"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" name="mexep"
-          contract="IMetadataExchange" />
+        <endpoint address="mex" binding="mexHttpBinding" name="mexep" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost/MovieServiceLibrary2/MovieService/" />
+            <add baseAddress="http://localhost/MovieServiceLibrary2/MovieService/"/>
           </baseAddresses>
         </host>
       </service>
@@ -37,13 +36,13 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp helpEnabled="true" />
+          <webHttp helpEnabled="true"/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -54,6 +53,18 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MovieDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BookDbExpress;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="MovieDbContext"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BookDbExpress;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+    </compilers>
+  </system.codedom>
 </configuration>
