--- a/MovieServiceLibrary2/app.config
+++ b/MovieServiceLibrary2/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -18,17 +18,21 @@
   app.config dell'host. System.Configuration non supporta i file di configurazione delle librerie. -->
   <system.serviceModel>
     <services>
-      <service name="MovieServiceLibrary2.MovieService">
-        <endpoint address="webep" behaviorConfiguration="restBehavior" binding="webHttpBinding" bindingConfiguration="" name="wcfrestep"
+      <service behaviorConfiguration="servBehavior" name="MovieServiceLibrary2.MovieService">
+        <endpoint address="webep" behaviorConfiguration="restBehavior"
+          binding="webHttpBinding" bindingConfiguration="" name="wcfrestep"
           contract="MovieServiceLibrary2.IMovieService">
           <identity>
-            <dns value="localhost"/>
+            <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" name="mexep" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" name="mexep"
+          contract="IMetadataExchange" />
+        <endpoint address="basic" binding="basicHttpBinding" bindingConfiguration=""
+          name="httpep" contract="MovieServiceLibrary2.IMovieService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost/MovieServiceLibrary2/MovieService/"/>
+            <add baseAddress="http://localhost/MovieServiceLibrary2/MovieService/" />
           </baseAddresses>
         </host>
       </service>
@@ -36,13 +40,14 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restBehavior">
-          <webHttp helpEnabled="true"/>
+          <webHttp helpEnabled="true" />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
-        <behavior name="">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
+        <behavior name="servBehavior">
+          <serviceMetadata httpGetEnabled="true" httpGetUrl="wsdlfile"
+            httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
