--- a/MovieServiceLibrary2/app.config
+++ b/MovieServiceLibrary2/app.config
@@ -32,7 +32,7 @@
           name="httpep" contract="MovieServiceLibrary2.IMovieService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost/MovieServiceLibrary2/MovieService/" />
+            <add baseAddress="http://localhost:8080/MovieServiceLibrary2/MovieService/" />
           </baseAddresses>
         </host>
       </service>
